Added Platform Enum
And formatting ofc